--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,9 @@ a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,c
 .visuallyHidden:not(:focus):not(:active) { position: absolute; width: 1px; height: 1px; margin: -1px;border: 0;padding: 0;white-space: nowrap;clip-path: inset(100%);clip: rect(00 0 0);overflow: hidden;}
 
 img {display: block; width: 100%;}
+
+/* green #004c3f */
+
+:root {
+  --color-green: #004c3f;
+}
