--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,20 @@ a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,c
 
 img {display: block; width: 100%;}
 
-/* green #004c3f */
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap');
 
 :root {
   --color-green: #004c3f;
+  --font: Rubik, sans-serif;
+}
+
+body {
+  font: 400 100% var(--font);
+  color: #444;
+}
+
+.wrapper {
+  max-width: 1200px;
+  width: 90%;
+  margin: 0 auto;
 }
