--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,26 @@ body {
   width: 90%;
   margin: 0 auto;
 }
+
+h2 {
+  font: 500 1.3rem var(--font);
+  color: var(--color-green);
+  margin-bottom: 5px;
+}
+
+h3 {
+  font-weight: 500;
+}
+
+button {
+  font: 400 0.9rem var(--font);
+  background-color: var(--color-green);
+  border: none;
+  color: white;
+  padding: 10px 15px;
+  letter-spacing: 1px;
+}
+
+button:disabled {
+  opacity: 0.7;
+}
