--- a/src/styles/usernominations.css
+++ b/src/styles/usernominations.css
@@ -1,3 +1,26 @@
 .userNomsContainer {
   margin-top: 30px ;
+  padding-bottom: 50px;
 }
+
+.userNomsContainer > p {
+  padding: 10px 0 20px 0;
+}
+
+.userNoms li {
+  border: none;
+  background-color: var(--color-green);
+  color: white;
+}
+
+.userNoms li button {
+  background-color: white;
+  font-weight: 500;
+  color: var(--color-green);
+  padding: 3px 8px;
+}
+
+.confirmBtn {
+  width: 100%;
+  margin-top: 10px;
+} 
