--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -6,10 +6,16 @@ header {
 
 header h1 {
   font: 700 2.5rem var(--font);
-  padding: 50px 0 30px 0;
+  padding: 60px 0 30px 0;
 }
 
 header p {
-  padding: 0 10px 50px 10px;
+  padding: 0 10px 70px 10px;
   font: 400 1.3rem var(--font);
+}
+
+@media (min-width: 480px) {
+  header h1 {
+    font-size: 3.5rem;
+  }
 }
