--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -1,15 +1,16 @@
 .mainNav {
-  padding: 30px 0;
+  padding: 50px 0;
   text-align: center;
 }
 
 .mainNav a {
-  text-decoration: none;
+  /* text-decoration: none; */
   padding: 15px;
   font-weight: 500;
   letter-spacing: 1.1px;
+  color: #444;
 }
 
-.mainNav a:visited {
+.mainNav a:visited, .mainNav a:active {
   color: #444;
 }
