--- a/src/styles/searchbar.css
+++ b/src/styles/searchbar.css
@@ -1,8 +1,9 @@
 .searchForm {
-  margin-bottom: 30px;
+  margin-bottom: 50px;
 }
 
 .searchForm input {
+  display: block;
   padding: 10px;
   width: 100%;
   border: 1px solid var(--color-green);
@@ -10,4 +11,13 @@
 
 .searchForm input::placeholder {
   font: 400 1rem var(--font);
+}
+
+@media (min-width: 768px) {
+
+  .searchForm input {
+    max-width: 70%;
+    margin: 0 auto;
+  }
+
 }
