--- a/src/index.css
+++ b/src/index.css
@@ -41,8 +41,17 @@ button {
   color: white;
   padding: 5px 12px;
   letter-spacing: 1px;
+  transition: box-shadow 0.4s;
 }
 
 button:disabled {
   opacity: 0.7;
+  pointer-events: none;
+}
+
+@media (min-width: 940px) {
+  button:hover,
+  button:focus {
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
+  }
 }
