--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -4,7 +4,7 @@
 }
 
 .mainNav a {
-  /* text-decoration: none; */
+  text-decoration: none;
   padding: 15px;
   font-weight: 500;
   letter-spacing: 1.1px;
@@ -13,4 +13,13 @@
 
 .mainNav a:visited, .mainNav a:active {
   color: #444;
+}
+
+@media (min-width: 940px) {
+  .mainNav a:hover,
+  .mainNav a:focus {
+    text-decoration: underline;
+    text-decoration-color: var(--color-green);
+    color: var(--color-green);
+  }
 }
